--- a/roles/osx/tasks/common-packages.yml
+++ b/roles/osx/tasks/common-packages.yml
@@ -4,22 +4,22 @@
 
 - name: brew tap common taps
   homebrew_tap: name={{ item }} state=present
-  with_items: common.brew.taps
+  with_items: osx.brew.taps
 
 - name: brew upgrade
   homebrew: update_homebrew=yes upgrade_all=yes
 
 - name: brew install common packages
   homebrew: name={{ item }} state=upgraded
-  with_items: common.brew.packages
+  with_items: osx.brew.packages
 
 - name: brew install custom packages
   homebrew: |
     name={{ item.name }}
     install_options={{ item.options|join(",") }}
     state=upgraded
-  with_items: common.brew.custom_packages
+  with_items: osx.brew.custom_packages
 
 - name: brew install common casks
   homebrew_cask: name={{ item }} state=installed
-  with_items: common.brew.casks
+  with_items: osx.brew.casks
