Add Marked as an installed cask.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -24,6 +24,7 @@ osx:
       - firefox
       - google-chrome
       - karabiner
+      - marked
       - noizio
       - spotify
       - textexpander
