Install terminal-notifier on my OS X machines.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -11,6 +11,7 @@ osx:
       - fish
       - fortune
       - reattach-to-user-namespace
+      - terminal-notifier
       - tmux
     custom_packages:
       - name: emacs
