OSX: tap caskroom/homebrew-versions; install Sublime Text 3.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -3,6 +3,7 @@ osx:
   brew:
     taps:
       - caskroom/cask
+      - caskroom/homebrew-versions
     packages:
       - ansible
       - autojump
@@ -29,6 +30,7 @@ osx:
       - noizio
       - skitch
       - spotify
+      - sublime-text3
       - textexpander
 
   dotfiles:
