OSX: it's caskroom/versions, not caskroom/homebrew-versions.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -3,7 +3,7 @@ osx:
   brew:
     taps:
       - caskroom/cask
-      - caskroom/homebrew-versions
+      - caskroom/versions
     packages:
       - ansible
       - autojump
