Make sure that ~/.config exists before trying to put things in it.

--- a/roles/osx/tasks/dotfiles.yml
+++ b/roles/osx/tasks/dotfiles.yml
@@ -26,6 +26,11 @@
     repo=https://github.com/alloy-d/dotfiles.git
     dest=~/.dotfiles.d
 
+- name: ensure ~/.config existence
+  file: |
+    dest=~/.config
+    state=directory
+
 - name: symlink dotfiles
   file: |
     src=~/.dotfiles.d/{{ item.src }}
