Install gpg2 by default.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -11,6 +11,7 @@ osx:
       - cowsay
       - fish
       - fortune
+      - gpg2
       - reattach-to-user-namespace
       - terminal-notifier
       - tmux
