Enable brew-installed fish as a login shell.

--- a/roles/osx/tasks/main.yml
+++ b/roles/osx/tasks/main.yml
@@ -2,3 +2,8 @@
 - include: common-packages.yml
 - include: dotfiles.yml
 - include: cows.yml
+
+- include: system-configuration.yml
+  become: yes
+  become_user: root
+
