Update a bunch of ancient Ansible tasks.

--- a/roles/osx/tasks/common-packages.yml
+++ b/roles/osx/tasks/common-packages.yml
@@ -2,24 +2,12 @@
 - name: brew update
   homebrew: update_homebrew=yes
 
-- name: brew tap common taps
-  homebrew_tap: name={{ item }} state=present
-  with_items: osx.brew.taps
-
 - name: brew upgrade
   homebrew: update_homebrew=yes upgrade_all=yes
 
 - name: brew install common packages
-  homebrew: name={{ item }} state=upgraded
-  with_items: osx.brew.packages
-
-- name: brew install custom packages
-  homebrew: |
-    name={{ item.name }}
-    install_options={{ item.options|join(",") }}
-    state=upgraded
-  with_items: osx.brew.custom_packages
+  homebrew: name={{ osx.brew.packages }} state=upgraded
 
 - name: brew install common casks
   homebrew_cask: name={{ item }} state=installed
-  with_items: osx.brew.casks
+  loop: "{{ osx.brew.casks | flatten(levels=1) }}"
