--- a/roles/osx/tasks/dotfiles.yml
+++ b/roles/osx/tasks/dotfiles.yml
@@ -1,20 +1,20 @@
 ---
 - name: clone emacs configuration
-  git: |
-    repo=https://gist.github.com/e90e8e8b1437586fba3f.git
-    dest=~/.emacs.d
+  git:
+    repo: https://gist.github.com/e90e8e8b1437586fba3f.git
+    dest: ~/.emacs.d
 
 - name: clone vim configuration
-  git: |
-    repo=https://github.com/alloy-d/vim-config.git
-    dest=~/.vim
-    recursive=yes
+  git:
+    repo: https://github.com/alloy-d/vim-config.git
+    dest: ~/.vim
+    recursive: yes
 
 - name: link vim configs
-  file: |
-    src=~/.vim/{{ item.src }}
-    dest={{ item.dest }}
-    state=link
+  file:
+    src: "~/.vim/{{ item.src }}"
+    dest: "{{ item.dest }}"
+    state: link
   with_items:
     - src: vimrc
       dest: ~/.vimrc
@@ -22,18 +22,18 @@
       dest: ~/.gvimrc
 
 - name: update dotfiles
-  git: |
-    repo=https://github.com/alloy-d/dotfiles.git
-    dest=~/.dotfiles.d
+  git:
+    repo: https://github.com/alloy-d/dotfiles.git
+    dest: ~/.dotfiles.d
 
 - name: ensure ~/.config existence
-  file: |
-    dest=~/.config
-    state=directory
+  file:
+    dest: ~/.config
+    state: directory
 
 - name: symlink dotfiles
-  file: |
-    src=~/.dotfiles.d/{{ item.src }}
-    dest={{ item.dest }}
-    state=link
-  with_items: osx.dotfiles.links
+  file:
+    src: "~/.dotfiles.d/{{ item.src }}"
+    dest: "{{ item.dest }}"
+    state: link
+  loop: "{{ osx.dotfiles.links|flatten(levels=1) }}"
