Configure GPG for macOS.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -13,6 +13,7 @@ osx:
       - reattach-to-user-namespace
       - ruby-build
       - macvim
+      - pinentry-mac
       - terminal-notifier
       - tmux
 
