--- a/roles/osx/tasks/main.yml
+++ b/roles/osx/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - include: common-packages.yml
 - include: dotfiles.yml
+- include: gpg.yml
 - include: cows.yml
 
 - include: system-configuration.yml
