Make sure ~/.gnupg/gpg-agent.conf exists before writing to it.

--- a/roles/osx/tasks/gpg.yml
+++ b/roles/osx/tasks/gpg.yml
@@ -5,6 +5,12 @@
     state: directory
     path: ~/.gnupg
 
+- name: "create ~/.gnupg/gpg-agent.conf"
+  file:
+    mode: 0600
+    state: present
+    path: ~/.gnupg/gpg-agent.conf
+
 - name: "configure pinentry program for GPG"
   lineinfile:
     path: ~/.gnupg/gpg-agent.conf
