s/file/touch/ because I finally read the docs.

--- a/roles/osx/tasks/gpg.yml
+++ b/roles/osx/tasks/gpg.yml
@@ -8,7 +8,7 @@
 - name: "create ~/.gnupg/gpg-agent.conf"
   file:
     mode: 0600
-    state: file
+    state: touch
     path: ~/.gnupg/gpg-agent.conf
 
 - name: "configure pinentry program for GPG"
