Install vault; replace old docker-toolbox with straight-up docker.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -27,6 +27,7 @@ osx:
       - terminal-notifier
       - terraform
       - tmux
+      - vault
       - watch
 
     casks:
@@ -35,7 +36,7 @@ osx:
       - alfred
       - aws-vault
       - dash
-      - docker-toolbox
+      - docker
       - fantastical
       - firefox
       - font-meslo-for-powerline
