Install Fira Code.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -39,6 +39,7 @@ osx:
       - docker
       - fantastical
       - firefox
+      - font-fira-code
       - font-meslo-for-powerline
       - front
       - google-chrome
