Account for kitty config.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -65,6 +65,8 @@ osx:
         dest: ~/.gitconfig
       - src: git/gitignore
         dest: ~/.gitignore
+      - src: kitty
+        dest: ~/.config/kitty
       - src: pry/pryrc
         dest: ~/.pryrc
       - src: ripgrep/ripgreprc
