--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -24,6 +24,7 @@ osx:
       - ruby-build
       - macvim
       - pinentry-mac
+      - postgresql
       - terminal-notifier
       - terraform
       - tmux
