Install Meslo LG.

--- a/roles/osx/defaults/main.yml
+++ b/roles/osx/defaults/main.yml
@@ -41,6 +41,7 @@ osx:
       - firefox
       - font-fira-code
       - font-meslo-for-powerline
+      - font-meslo-lg
       - front
       - google-chrome
       - karabiner-elements
