Install bat and fd so I can be cooler.

--- a/roles/macos/defaults/main.yml
+++ b/roles/macos/defaults/main.yml
@@ -9,8 +9,10 @@ macos:
       - ansible
       - autojump
       - awscli
+      - bat
       - cowsay
       - elixir
+      - fd
       - fish
       - fortune
       - gpg2
