Install pass and pass-otp.

--- a/roles/macos/defaults/main.yml
+++ b/roles/macos/defaults/main.yml
@@ -24,6 +24,8 @@ macos:
       - lynx
       - neovim
       - nvm
+      - pass
+      - pass-otp
       - rbenv
       - reattach-to-user-namespace
       - ripgrep
