--- a/roles/macos/defaults/main.yml
+++ b/roles/macos/defaults/main.yml
@@ -89,3 +89,5 @@ macos:
         dest: ~/.pryrc
       - src: ripgrep/ripgreprc
         dest: ~/.ripgreprc
+      - src: tridactyl/tridactylrc
+        dest: ~/.tridactylrc
