--- a/roles/arch-desktop/tasks/common-packages.yml
+++ b/roles/arch-desktop/tasks/common-packages.yml
@@ -3,11 +3,23 @@
   pacman:
     name:
       - bat
+      - feh
       - fish
       - git
+      - gnu-free-fonts
+      - htop
+      - i3-gaps
+      - i3blocks
+      - i3status
       - kitty
       - neovim
+      - numlockx
       - pass
       - pass-otp
+      - picom
       - ripgrep
+      - rlwrap
+      - smbclient
+      - terminus-font
       - tmux
+      - ttf-inconsolata
